// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-8 {
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 0.875rem;
}

.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
}

.emotion-0:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-0:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-0:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-4 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #0A67D1;
  border-bottom-color: #0A67D1;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-4:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-4:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-4:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-6 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #B9B9BD;
}

.emotion-6:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-6:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-6:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-6:hover {
  cursor: not-allowed;
}

<div>
  <ul
    class="emotion-8"
    role="tablist"
  >
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
        role="tab"
        tabindex="0"
      >
        Home
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
        role="tab"
        tabindex="-1"
      >
        Test
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-4"
        role="tab"
        tabindex="-1"
      >
        Active
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-6 disabled"
        role="tab"
        tabindex="-1"
      >
        Disabled
      </span>
    </li>
  </ul>
</div>
`;

exports[`shuld accept "component" prop 1`] = `
.emotion-8 {
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 0.875rem;
}

.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
}

.emotion-0:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-0:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-0:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-4 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #0A67D1;
  border-bottom-color: #0A67D1;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-4:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-4:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-4:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-6 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2D343B;
  font-weight: bold;
  padding: 0.5rem 0.75rem;
  line-height: 1rem;
  border-radius: 4px;
  outline: 0;
  border: 2px solid transparent;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #B9B9BD;
}

.emotion-6:not(.disabled):hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-6:not(.disabled):active {
  background: #F2F2F7;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-6:focus {
  border-color: #0A67D1;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-6:hover {
  cursor: not-allowed;
}

<div>
  <ul
    class="emotion-8"
    role="tablist"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="/"
        role="tab"
        tabindex="0"
      >
        Home
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="/"
        role="tab"
        tabindex="-1"
      >
        Test
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-4"
        href="/"
        role="tab"
        tabindex="-1"
      >
        Active
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-6 disabled"
        href="/"
        role="tab"
        tabindex="-1"
      >
        Disabled
      </a>
    </li>
  </ul>
</div>
`;
